<resources>
    <string name="app_name">SpPinturasApp</string>
    <string name="facaLogin">Faça seu Login</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="btnSair">Sair</string>
    <string name="actionBuscar">Buscar</string>
    <string name="actionAtualizar">Atualizar</string>
    <string name="actionConfig">Configurações</string>
    <string name="clientes">Clientes</string>
    <string name="resumoOrcamentos">Resumo de Orçamentos</string>
    <string name="orcamentos">Orçamentos</string>
    <string name="novoPedido">Novo Pedido</string>
    <string name="novo">Novo</string>
    <string name="orcamentoDetalhe">Detalhe do Orçamento</string>
    <string name="pedidos">Pedidos</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="labelNomeOrcamento">Nome do Orçamento</string>
    <string name="labelValor">Valor Total</string>
    <string name="labelCliente">Nome do Cliente</string>
    <string name="labelStatus">Status do Orçamento</string>
    <string name="labelIdOrcamento">Id do Orçamento</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="excluir">Excluir</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="desejaExluirOrcamento">Deseja excluir o orçamento ?</string>
    <string name="desejaExluirPedido">Desaja exluir o pedido ?</string>
    <string name="labelIdPedido">Id do Pedido</string>
    <string name="labelNomeSolicitante">Nome do solicitante</string>
    <string name="labelEmail">E-mail</string>
    <string name="labelTelefone">Telefone</string>
    <string name="labelDatePedido">Data do pedido</string>
    <string name="labelDescricaoPedido">Descrição do pedido</string>
    <string name="cardCliente">Cliente: %1$s</string>
    <string name="cardDataPedido">Data do pedido: %1$s</string>
    <string name="lembrarLogin">Lembrar Login</string>
    <string name="semConexaoIntenet">Sem conexão a internet</string>
    <string name="conexaoInternetRestabelecida">Conexão com a internet restabelecida</string>
</resources>
