<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

    <ImageView
            android:layout_width="318dp"
            android:layout_height="194dp" app:srcCompat="@drawable/sppinturas_logo" android:id="@+id/sppinturasLogo"/>
    <TextView
            android:text="@string/usuario"
            android:layout_width="317dp"
            android:layout_height="wrap_content" android:id="@+id/textView2"/>
    <EditText
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputUsuario"/>
    <TextView
            android:text="@string/senha"
            android:layout_width="318dp"
            android:layout_height="wrap_content" android:id="@+id/textView3"/>
    <EditText
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/inputSenha"/>
    <Button
            android:text="@string/login"
            android:layout_width="317dp"
            android:layout_height="59dp" android:id="@+id/btnLogin"
            style="@style/Widget.AppCompat.Button"/>
    <CheckBox
            android:id="@+id/checkLembrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lembrarLogin"
            android:buttonTint="@color/btnAzul" android:textColor="@color/textoBranco"/>
</LinearLayout>