<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PedidoDetalheActivity"
        android:orientation="vertical"
        android:padding="10dp">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/labelIdPedido"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/labelIdPedido"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:id="@+id/inputIdPedido" android:paddingBottom="10dp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtDataPedido"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/labelDatePedido"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:id="@+id/inputDataPedido" android:paddingBottom="10dp"/>
            <TextView
                    android:text="@string/labelNomeSolicitante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/labelNomeSolicitante" android:paddingLeft="4dp"
                    android:paddingRight="4dp" android:paddingTop="10dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/inputNomeSolicitante" android:paddingTop="20dp"/>
            <TextView
                    android:text="@string/labelEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp" android:paddingRight="4dp" android:paddingLeft="4dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/inputEmail" android:paddingTop="20dp" android:inputType="text"/>
            <TextView
                    android:text="@string/labelTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:paddingTop="10dp"
                    android:paddingLeft="4dp" android:paddingRight="4dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/inputTelefone" android:paddingTop="20dp"/>
            <TextView
                    android:text="@string/labelDescricaoPedido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:paddingTop="10dp"
                    android:paddingLeft="4dp" android:paddingRight="4dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/inputDescricao"
                    android:paddingTop="20dp"
            />
            <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:paddingTop="20dp">
                <Button
                        android:text="@string/salvar"
                        android:layout_width="102dp"
                        android:layout_height="wrap_content" android:id="@+id/btnSalvarPedido"
                />
                <Button
                        android:text="@string/cancelar"
                        android:layout_width="102dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnCancelarPedido"
                        android:layout_marginEnd="0dp" android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>